[workspace]
resolver = "2"
members = ["qcd-sme", "tc_long_prop"]

[workspace.dependencies]
env_logger = "0.11"
lazy_static = "1.4"
log = "0.4"
peroxide = { version = ">=0.38",  features = ["plot", "complex"] }
rayon = "1.10"
serial_test = "3.1"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
