[package]
name = "qcd-sme"
version = "0.2.1"
edition = "2021"
authors = ["Giorgio Comitini <giorgio.comitini@dfa.unict.it>"]
description = "numerical library for the screened massive expansion of QCD"
repository = "https://github.com/GComitini/qcd-sme-rs"
license = "GPL-3.0-or-later"
keywords = ["qcd", "non-perturbative", "gluon", "quark", "mass", "yang-mills",
            "physics", "quantum", "field theory"]
categories = ["science", "mathematics"]

[dependencies]
num = "0.4"
peroxide = { workspace = true }

[build-dependencies]
cbindgen = "0.26"
regex = "1.10"

[dev-dependencies]
rayon = "1.10"
serial_test = { workspace = true }

[lib]
crate-type = ["lib", "cdylib", "staticlib"]
