[package]
name = "qcd-sme"
version = "0.3.2"
edition = "2021"
authors = ["Giorgio Comitini <giorgio.comitini@dfa.unict.it>"]
description = "numerical library for the screened massive expansion of QCD"
repository = "https://github.com/GComitini/qcd-sme-rs"
license = "GPL-3.0-or-later"
keywords = ["qcd", "physics", "quantum", "field", "theory"]
categories = ["science", "mathematics"]

[dependencies]
num = "0.4"
peroxide = { workspace = true }

[build-dependencies]
cbindgen = "0.26"
regex = "1.11"

[dev-dependencies]
approx = "0.5"
rayon = { workspace = true }
serial_test = { workspace = true }

[lib]
crate-type = ["lib", "cdylib", "staticlib"]
