[package]
name = "tc_long_prop"
version = "0.1.2"
edition = "2021"
authors = ["Giorgio Comitini <giorgio.comitini@dfa.unict.it>"]
description = "critical temperature of QCD from the longitudinal gluon propagator"
repository = "https://github.com/GComitini/qcd-sme-rs"
license = "GPL-3.0-or-later"
keywords = ["qcd", "non-perturbative", "gluon", "quark", "mass", "yang-mills",
            "physics", "quantum", "field theory"]
categories = ["science", "mathematics"]

[dependencies]
env_logger = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
gnuplot = { workspace = true }
qcd-sme = { path = "../qcd-sme" }
peroxide = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_yml = { workspace = true }

[features]
# Do not enable manually, used by fintmu_poles' features
ftm_twosided = []

# Enable to make fintmu_poles output 'the big picture' (wider range
# of momenta, twosided). Takes *a lot* more time to execute, likely
# a factor of 10000x
ftm_big = ["ftm_twosided"]

# Enable to make fintmu_poles plot the imaginary part of the dressing
# function instead of its absolute value (look for cuts instead
# of poles)
ftm_cut = ["ftm_twosided"]
